<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="190dp"
        android:fontFamily="@font/iglesia"
        android:text="@string/login"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/edituser"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:hint="@string/usuario"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#757575"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editpassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="@string/senha"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btsend"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="Entrar" />

</LinearLayout>