<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/textura_branca"
    tools:context=".homeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/lajeadohome"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/mascara_tijolos_header" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="190dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="160dp"
        app:srcCompat="@drawable/logomelhor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="390dp"
        android:text="@string/title"
        android:fontFamily="@font/sanseriffic"
        android:textColor="@color/primaryTextColor"
        android:textSize="30sp"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="160dp"
        android:layout_marginTop="490dp"
        android:layout_height="140dp"
        android:layout_marginStart="30dp"
        app:shapeAppearanceOverlay="@style/style"
        android:onClick="services"
        android:src="@drawable/capacriciuma"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/services"
        android:textSize="25sp"
        android:textColor="@color/DarkGreyprimaryColor"
        android:layout_marginTop="620dp"
        android:layout_marginStart="60sp"
        android:onClick="services"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="160dp"
        android:layout_marginTop="490dp"
        android:layout_height="140dp"
        android:layout_marginStart="240dp"
        app:shapeAppearanceOverlay="@style/style"
        android:onClick="schedule"
        android:src="@drawable/lamafiabarbeariasapiranga1___copia"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agendar"
        android:textSize="25sp"
        android:textColor="@color/DarkGreyprimaryColor"
        android:layout_marginTop="620dp"
        android:layout_marginStart="275sp"
        android:onClick="schedule"
        />


</FrameLayout>